# git-commit-gpt

./: Cargo.toml
src/: main.rs
