[package]
name = "git-commit-gpt"
authors = ["Finn Voorhees"]
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to help you automatically generate and select commit messages for your Git repositories based on the changes you've staged."
repository = "https://github.com/finnvoor/git-commit-gpt"
categories = ["command-line-interface"]
keywords = ["cli"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.3"
console = "0.15.5"
crossterm = "0.26.1"
clap = { version = "4.2.1", features = ["derive"] }
